@@ -99,8 +99,8 @@ void gsl_vector_long_double_minmax_index (const gsl_vector_long_double * v, size
 
 int gsl_vector_long_double_add (gsl_vector_long_double * a, const gsl_vector_long_double * b);
 int gsl_vector_long_double_sub (gsl_vector_long_double * a, const gsl_vector_long_double * b);
-int gsl_vector_long_double_mul_elements (gsl_vector_long_double * a, const gsl_vector_long_double * b);
-int gsl_vector_long_double_div_elements (gsl_vector_long_double * a, const gsl_vector_long_double * b);
+int gsl_vector_long_double_mul (gsl_vector_long_double * a, const gsl_vector_long_double * b);
+int gsl_vector_long_double_div (gsl_vector_long_double * a, const gsl_vector_long_double * b);
 int gsl_vector_long_double_scale (gsl_vector_long_double * a, const double x);
 int gsl_vector_long_double_add_constant (gsl_vector_long_double * a, const double x);
 
