@@ -1,5 +1,10 @@
 Fri May  5 10:57:16 2000  Brian Gough  <bjg@network-theory.co.uk>
 
+	* oper_source.c (FUNCTION): changed functions
+ 	gsl_vector_mul_elements and gsl_vector_div_elements to
+ 	gsl_vector_mul and gsl_vector_div since the _elements suffix is
+ 	redundant for vectors (unlike matrices).
+
 	* oper.c: added simple arithmetic operations (+,-,*,/,scale,+const)
 
 Wed Apr 26 14:17:14 2000  Brian Gough  <bjg@network-theory.co.uk>
